refactor: refactor: adapta controllers e services para uso de DTOs em Manutencao